Adding travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,9 @@ install:
   - mv bower_components/ app/
 script:
   - gulp serve
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
