--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "devDependencies": {
     "browser-sync": "^2.7.7",
+    "bower":"^1.7.5",
     "connect-history-api-fallback": "^1.1.0",
     "del": "^2.0.2",
     "glob-all": "^3.0.1",
