--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,9 @@ install:
   - npm install
   - bower update
   - mv bower_components/ app/
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 script:
   - gulp wct:local
