--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
 install:
   - npm install
   - bower update
-  - mv bower_components/ app/
+  - cp -rf bower_components/ app/
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
